--- a/templates/pages/kontakt.html
+++ b/templates/pages/kontakt.html
@@ -9,9 +9,9 @@
     <div class="container-fluid text-center" style="bottom: 10%; ">
             <h1>Kontakti</h1>
             <div class="inline-banner-links">
-                <a href="index.html">Domov</a>
+                <a href="{% url 'domov' %}">Domov</a>
                 <i class="fas fa-arrow-right"></i>
-                <a href="about.html">Kontakti</a>
+                <a href="{% url 'kontakt' %}">Kontakti</a>
             </div>
         </div>
 </div>
