--- a/templates/pages/malice.html
+++ b/templates/pages/malice.html
@@ -9,9 +9,9 @@
         <div class="content">
                 <h1>Tedenske malice</h1>
                 <div class="inline-banner-links">
-                    <a href="index.html">Domov</a>
+                    <a href="{% url 'domov' %}">Domov</a>
                     <i class="fas fa-arrow-right"></i>
-                    <a href="about.html">Malice</a>
+                    <a href="{% url 'malice' %}">Malice</a>
                 </div>
         </div>
     </div>
