--- a/templates/pages/onas.html
+++ b/templates/pages/onas.html
@@ -6,9 +6,9 @@
     <div class="container-fluid text-center">
         <h1>O nas</h1>
         <div class="inline-banner-links">
-            <a href="index.html">Domov</a>
+            <a href="{% url 'domov' %}">Domov</a>
             <i class="fas fa-arrow-right"></i>
-            <a href="about.html">O nas</a>
+            <a href="{% url 'onas' %}">O nas</a>
         </div>
     </div>
 </div>
